Float Chat - chat input location error fixed & panel cut off error fixed & panel CSS edit

--- a/frontend/src/components/GroupChats/GroupChatPanel.module.css
+++ b/frontend/src/components/GroupChats/GroupChatPanel.module.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 21.5rem;
-  /* height: 100vh; */
+  height: 100vh;
   border-radius: 0.5rem;
   border-left: 1px solid #444;
   overflow-y: auto;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
+  padding-bottom: 2rem;
 }
 
 /* 스크롤바 설정 */
